app/assets/stylesheets/playlists.css.scss
// Place all the styles related to the Playlists controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

tr span.artist {
  font-weight: bold;
  font-weight: 600;
}

td.number {
  text-align: right;
}

thead .helper {
  font-weight: normal;
}

tbody a:hover {
  background: transparent;
}
// a.label, a.label :visited {
//  background-color: #BFBFBF;
//}
//a.label.success, a.label.warning, a.label.important, a.label.notice {
//  color: white;
//}

